[package]
name = "froxy"
version = "0.1.0"
edition = "2021"
description = "Francis-Scherm proxy"
readme = "README.md"
repository = "https://github.com/ZeusWPI/froxy"
publish = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
clap = "4.0.29"
tokio = { version="1.23.0", features=["full"] }
